--- a/feedback/templates/feedback/index.html
+++ b/feedback/templates/feedback/index.html
@@ -13,6 +13,7 @@ Feedback - Directory
 
 {% block additional_include %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.2.0/list.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.3/js.cookie.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -226,10 +227,24 @@ $(".shortlist-elm").click(function(e) {
 
 });
 
-  $(function() {
-    $(".search-bar").focus();
-    $('[data-toggle="tooltip"]').tooltip();
-  });
+function normalize_name(name) {
+  return name.replace(/\W+/g, "").toLowerCase();
+};
+
+function setApplicantsCookie() {
+  var applicants = userList.visibleItems.map( el => normalize_name(el._values.name));
+  Cookies.set('applicants', applicants);
+};
+
+userList.on("updated", function(updated) {
+  setApplicantsCookie();
+});
+
+$(function() {
+  setApplicantsCookie();
+  $(".search-bar").focus();
+  $('[data-toggle="tooltip"]').tooltip();
+});
 
 </script>
 {% endblock %}
