--- a/feedback/templates/feedback/edit_applicant.html
+++ b/feedback/templates/feedback/edit_applicant.html
@@ -97,7 +97,7 @@ Feedback - Edit {{ applicant.get_full_name }}
       <span class="error">{{ form.pic.errors }}</span>
     </div>
     <div class="col-md-4 col-md-offset-4 col-sm-12 text-center margin-height-md">
-      <label>Sneak Peek Pic</label>
+      <label>Event Pic</label>
       {{ form.actual_pic }}
       <span class="error">{{ form.actual_pic.errors }}</span>
     </div>
