--- a/feedback/templates/feedback/edit_applicant.html
+++ b/feedback/templates/feedback/edit_applicant.html
@@ -89,6 +89,15 @@ Feedback - Edit {{ applicant.get_full_name }}
         {{ form.career|add_class:"form-control" }}
         <span class="error">{{ form.career.errors }}</span>
       </div>
+    </div> 
+    <div class="col-md-12 col-sm-12">
+      <div class="form-group margin-sm">
+        <label for="id_{{ form.group.name }}" class="form-label">
+          Group
+        </label>
+        {{ form.group|add_class:"form-control" }}
+        <span class="error">{{ form.group.errors }}</span>
+      </div>
     </div>   
     <!--TODO: Replace this with something else later -->
     <div class="col-md-4 col-md-offset-4 col-sm-12 text-center margin-height-md">
