--- a/feedback/templates/feedback/applicant.html
+++ b/feedback/templates/feedback/applicant.html
@@ -27,12 +27,17 @@ Feedback - {{ applicant.get_full_name }}
       <a href="{% url 'feedback:edit_applicant' event_name applicant.norm_name %}" class="btn btn-default btn-sm profile-show-btn"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;&nbsp;Edit</a>
     </h4>
   </div>
+  {% if is_interviewer %}
+  <div class="col-md-12 text-center">
+    <h3><a href="{{ survey_link }}" target="_blank">Link to interviewer feedback form</a></h3>
+  </div>
+  {% endif %}
   <form method="post" action="" id="feedback_form">
   <div class="margin-bot-md col-md-12 text-center">
     <a href="#" id="prev_link" class="feedback-nav-link"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a>
     &nbsp;&nbsp;
     <a href="{% url 'feedback:index' event_name %}" class="btn btn-default">HOME</a>
-    {% if state.current != 3 %}
+    {% if state.current != 3 and not is_interviewer %}
       &nbsp;&nbsp;
       <input class="btn btn-default" type="submit" value="SAVE" />
     {% endif %}
