add view for dates of profile edits, as well as the editor; closes both #98 and #85

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -43,6 +43,8 @@ McDermott Network
       {% endif %}
       {% if user|has_role:'staff' %}
       <br>
+      <a href="{% url 'latest_edits' %}">View times since last edits</a>
+      <br>
       <a href="{% url 'feedback:events' %}">Manage Feedback Events</a>
       <br>
       <a href="{% url 'stats' %}">Stats</a>
