--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -51,8 +51,9 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="{% url 'own_profile' %}">My Profile</a></li>
-                  <li><a href="{% url 'issues:index' %}">Report Issue</a></li>
+                  <li><a href="{% url 'issues:suggestion' %}">Make Suggestion</a></li>
                   <li role="separator" class="divider"></li>
+                  <li><a href="{% url 'issues:index' %}">Report Issue</a></li>
                   <li><a href="{% url 'edit_account' %}">Edit Account</a></li>
                   <li><a href="{% url 'logout' %}">Logout</a></li>
                 </ul>
